--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "apexcharts": "^3.35.0",
+    "gh-pages": "^3.2.3",
     "install": "^0.13.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
