--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.7.2",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -29,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -53,5 +56,6 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24"
-  }
+  },
+  "homepage": "https://yongbospace.github.io/react-coin"
 }
