--- a/package.json
+++ b/package.json
@@ -57,5 +57,5 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24"
   },
-  "homepage": "https://yongbospace.github.io/react-coin"
+  "homepage": "https://yongbospace.github.io/react-crypto"
 }
